Commit 6  - add Array and stamp